--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -21,6 +21,10 @@ spring.kafka.consumer.isolation.level="read_committed"
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
 spring.security.oauth2.client.registration.facebook.client-id=${client-id}
 spring.security.oauth2.client.registration.facebook.client-secret=${client-secret}
 spring.security.oauth2.client.registration.facebook.scope=email, public_profile
+
+springdoc.swagger-ui.path=/swagger-ui.html
+
