--- a/bonnie-rest/pom.xml
+++ b/bonnie-rest/pom.xml
@@ -62,8 +62,8 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <jvmArguments>-Dspring.application.admin.enabled=true</jvmArguments>
-                    <wait>1000</wait>
-                    <maxAttempts>360</maxAttempts>
+                    <wait>500</wait>
+                    <maxAttempts>180</maxAttempts>
                     <mainClass>com.cgi.bonnie.RestStarter</mainClass>
                 </configuration>
                 <executions>
@@ -109,6 +109,27 @@
                             <language>typescript-angular</language>
                             <output>${project.build.directory}/../../frontend/generated-client</output>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.0.2</version>
+                <configuration>
+                    <overwrite>true</overwrite>
+                    <outputDirectory>${project.build.directory}/../../frontend/generated-client</outputDirectory>
+                    <resources>
+                        <resource>
+                            <directory>${project.basedir}/src/helper/resources</directory>
+                        </resource>
+                    </resources>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
