--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
+version: "2"
 services:
   backend:
     image: bonnie-backend:latest
-    name: backend
+    container_name: "backend"
     ports:
       - 8082:8082
   frontend:
     image: bonnie-frontend:latest
-    name: frontend
+    container_name: "frontend"
     ports:
       - 8081:80
