--- a/bonnie-rest/pom.xml
+++ b/bonnie-rest/pom.xml
@@ -62,6 +62,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <jvmArguments>-Dspring.application.admin.enabled=true</jvmArguments>
+                    <arguments>--bonnie.authentication.cors.allowed.origins=https://bonnie.eu</arguments>
                     <wait>1000</wait>
                     <maxAttempts>360</maxAttempts>
                     <mainClass>com.cgi.bonnie.RestStarter</mainClass>
