--- a/starter/src/main/resources/application-devserver.properties
+++ b/starter/src/main/resources/application-devserver.properties
@@ -1,2 +1,2 @@
-bonnie.authentication.cors.allowed.origins=http://bonnie.eu,https://bonnie.eu,http://bonnie.eu:8081,https://bonnie.eu:8081
-bonnie.authentication.oauth.redirect.url=https://bonnie.eu/my-orders
+bonnie.authentication.cors.allowed.origins=http://bonnee.eu,https://bonnee.eu,http://bonnee.eu:8081,https://bonnee.eu:8081
+bonnie.authentication.oauth.redirect.url=https://bonnee.eu/my-orders
