--- a/Dockerfile-frontend
+++ b/Dockerfile-frontend
@@ -1,3 +1,10 @@
 FROM httpd:2.4
 COPY ./frontend/dist/bonnie-frontend/ /usr/local/apache2/htdocs/
 COPY ./frontend/.htaccess /usr/local/apache2/htdocs/.htaccess
+
+RUN sed -i '/LoadModule rewrite_module/s/^#//g' /usr/local/apache2/conf/httpd.conf
+
+RUN { \
+  echo 'IncludeOptional conf.d/*.conf'; \
+} >> /usr/local/apache2/conf/httpd.conf \
+  && mkdir /usr/local/apache2/conf.d
