--- a/Dockerfile-frontend
+++ b/Dockerfile-frontend
@@ -3,6 +3,7 @@ COPY ./frontend/dist/bonnie-frontend/ /usr/local/apache2/htdocs/
 COPY ./frontend/.htaccess /usr/local/apache2/htdocs/.htaccess
 
 RUN sed -i '/LoadModule rewrite_module/s/^#//g' /usr/local/apache2/conf/httpd.conf
+RUN sed -i 's/AllowOverride\ None/AllowOverride\ All/g' /usr/local/apache2/conf/httpd.conf
 
 RUN { \
   echo 'IncludeOptional conf.d/*.conf'; \
