--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,34 @@
 version: "2"
 services:
+  zookeeper:
+    image: zookeeper:3.8.0-temurin
+    container_name: "zookeeper"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+    expose:
+      - "2181"
+  kafka:
+    image: bitnami/kafka:3.3.1
+    container_name: "kafka"
+    environment:
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      ALLOW_PLAINTEXT_LISTENER: true
+    expose:
+      - "9092"
+    depends_on:
+      - zookeeper
+    links:
+      - zookeeper
   backend:
     image: bonnie-backend:latest
     container_name: "backend"
+    environment:
+      SPRING_KAFKA_BOOTSTRAP-SERVERS: kafka:9092
+    depends_on:
+      - kafka
+    links:
+      - kafka
     ports:
       - 8082:8082
   frontend:
