--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,21 +25,21 @@ services:
     restart: always
     container_name: "postgres_storage"
     environment:
-      - POSTGRES_PASSWORD: ${DB_ROOT_USERNAME}
-      - POSTGRES_USER: ${DB_ROOT_PWD}
+      - POSTGRES_USER=${DB_ROOT_USERNAME}
+      - POSTGRES_PASSWORD=${DB_ROOT_PWD}
     ports:
       - 5432:5432
     volumes:
-      - postgres_storage:/var/lib/postgresql/data
+      - postgres_storage: /var/lib/postgresql/data
   backend:
     image: bonnie-backend:latest
     container_name: "backend"
     environment:
       SPRING_KAFKA_BOOTSTRAP-SERVERS: kafka:9092
       SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/
-      SPRING_DATASOURCE_USERNAME: ${DB_USERNAME}
-      SPRING_DATASOURCE_PASSWORD: ${JASYPT_DB_DECRYPT_PWD}
-      JASYPT_ENCRYPTOR_PASSWORD: ${JASYPT_DB_CONNECTION_PWD}
+      SPRING_DATASOURCE_USERNAME+${DB_USERNAME}"
+      SPRING_DATASOURCE_PASSWORD: "${JASYPT_DB_DECRYPT_PWD}"
+      JASYPT_ENCRYPTOR_PASSWORD: "${JASYPT_DB_CONNECTION_PWD}"
     depends_on:
       - kafka
       - postgres_storage
