--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     container_name: "backend"
     environment:
       SPRING_KAFKA_BOOTSTRAP-SERVERS: kafka:9092
-      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres_storage:5432/
       SPRING_DATASOURCE_USERNAME: ${DB_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${JASYPT_DB_DECRYPT_PWD}
       JASYPT_ENCRYPTOR_PASSWORD: ${JASYPT_DB_CONNECTION_PWD}
@@ -45,6 +45,7 @@ services:
       - postgres_storage
     links:
       - kafka
+      - postgres_storage
     ports:
       - 8082:8082
   frontend:
