--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
     restart: always
     container_name: "postgres_storage"
     environment:
-      - POSTGRES_USER=doodle
-      - POSTGRES_PASSWORD=doodle
+      POSTGRES_USER: ${DB_ROOT_USERNAME}
+      POSTGRES_PASSWORD: ${DB_ROOT_PWD}
     ports:
       - 5432:5432
     volumes:
@@ -37,9 +37,9 @@ services:
     environment:
       SPRING_KAFKA_BOOTSTRAP-SERVERS: kafka:9092
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres_storage:5432/
-      SPRING_DATASOURCE_USERNAME: doodle
-      SPRING_DATASOURCE_PASSWORD: ENC(6KpVjqrPwKvLt/5Cjo2ZHg==)
-      JASYPT_ENCRYPTOR_PASSWORD: master-password-bonnee
+      SPRING_DATASOURCE_USERNAME: ${DB_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${JASYPT_DB_CONNECTION_PWD}
+      JASYPT_ENCRYPTOR_PASSWORD: ${JASYPT_DB_DECRYPT_PWD}
     depends_on:
       - kafka
       - postgres_storage
